; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/compress/extr_gzip.c_expand_buf.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/compress/extr_gzip.c_expand_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_gzip_context_t = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64 }

@BUF_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.st_gzip_context_t*)* @expand_buf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @expand_buf(%struct.st_gzip_context_t* %0) #0 {
  %2 = alloca %struct.st_gzip_context_t*, align 8
  store %struct.st_gzip_context_t* %0, %struct.st_gzip_context_t** %2, align 8
  %3 = load %struct.st_gzip_context_t*, %struct.st_gzip_context_t** %2, align 8
  %4 = getelementptr inbounds %struct.st_gzip_context_t, %struct.st_gzip_context_t* %3, i32 0, i32 0
  %5 = load %struct.st_gzip_context_t*, %struct.st_gzip_context_t** %2, align 8
  %6 = getelementptr inbounds %struct.st_gzip_context_t, %struct.st_gzip_context_t* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = add nsw i64 %8, 1
  %10 = call i32 @h2o_vector_reserve(i32* null, %struct.TYPE_2__* %4, i64 %9)
  %11 = load %struct.st_gzip_context_t*, %struct.st_gzip_context_t** %2, align 8
  %12 = getelementptr inbounds %struct.st_gzip_context_t, %struct.st_gzip_context_t* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.st_gzip_context_t*, %struct.st_gzip_context_t** %2, align 8
  %16 = getelementptr inbounds %struct.st_gzip_context_t, %struct.st_gzip_context_t* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = add nsw i64 %18, 1
  store i64 %19, i64* %17, align 8
  %20 = add nsw i64 %14, %18
  %21 = load i32, i32* @BUF_SIZE, align 4
  %22 = call i32 @h2o_mem_alloc(i32 %21)
  %23 = call i32 @h2o_sendvec_init_raw(i64 %20, i32 %22, i32 0)
  ret void
}

declare dso_local i32 @h2o_vector_reserve(i32*, %struct.TYPE_2__*, i64) #1

declare dso_local i32 @h2o_sendvec_init_raw(i64, i32, i32) #1

declare dso_local i32 @h2o_mem_alloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
